tests/files/type_checker_tests/should_pass/010.cmdr
//Test bindings type check
x: bool = true;
y = x;
