tests/files/type_checker_tests/should_fail/208.cmdr
//Should fail using variables incorrectly
x = 3;
y: x = 3;
